design page filled and some refactoring